tests/constructor/call_init_explicitly.rz
struct Foo {
    fn init() {}
}

var f = Foo()
f.init() // error: can't call the constructor directly